--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,32 @@
-name: Deploy Snake Game to EC2
+- name: Deploy to EC2
+  uses: appleboy/ssh-action@v0.1.10
+  with:
+    host: ${{ secrets.EC2_HOST }}
+    username: ${{ secrets.EC2_USER }}
+    key: ${{ secrets.EC2_SSH_KEY }}
+    script: |
+      set -ex
 
-on:
-  push:
-    branches:
-      - main
+      # Update system packages
+      sudo -n apt update -y
+      sudo -n apt install -y python3 python3-pip python3-venv git
 
-jobs:
-  deploy:
-    runs-on: self-hosted
+      # Remove old directory if it exists
+      rm -rf season2-snake_game
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      # Clone fresh
+      git clone https://github.com/AshutoshBotle/season2-snake_game.git
+      cd season2-snake_game
+      ls -al
+      
+      # Set up a virtual environment
+      python3 -m venv venv
+      source venv/bin/activate
+      pip install --upgrade pip
+      pip install -r requirements.txt
 
-    - name: Deploy to EC2
-      uses: appleboy/ssh-action@v0.1.10
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          # Update system packages
-          sudo apt update -y
-          sudo apt install -y python3 python3-pip python3-venv git
+      # Run app
+      nohup venv/bin/python app.py > snake_game.log 2>&1 &
 
-          # Remove old directory if it exists
-          sudo rm -rf season2-snake_game
+      echo "✅ Snake Game deployed successfully!"
 
-          # Clone fresh
-          git clone https://github.com/AshutoshBotle/season2-snake_game.git
-          cd season2-snake_game
-          ls -al
-          
-          # Set up a virtual environment
-          python3 -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
-          pip install -r requirements.txt
-          sudo nohup python3 app.py > snake_game.log 2>&1 &
-
-          echo "✅ Snake Game deployed successfully!"
