--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,34 @@
-- name: Deploy to EC2
-  uses: appleboy/ssh-action@v0.1.10
-  with:
-    host: ${{ secrets.EC2_HOST }}
-    username: ${{ secrets.EC2_USER }}
-    key: ${{ secrets.EC2_SSH_KEY }}
-    script: |
-      set -ex
+name: Deploy Snake Game to EC2
 
-      # Update system packages
-      sudo -n apt update -y
-      sudo -n apt install -y python3 python3-pip python3-venv git
+on:
+  push:
+    branches:
+      - main
 
-      # Remove old directory if it exists
-      rm -rf season2-snake_game
+jobs:
+  deploy:
+    runs-on: self-hosted
 
-      # Clone fresh
-      git clone https://github.com/AshutoshBotle/season2-snake_game.git
-      cd season2-snake_game
-      ls -al
-      
-      # Set up a virtual environment
-      python3 -m venv venv
-      source venv/bin/activate
-      pip install --upgrade pip
-      pip install -r requirements.txt
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      # Run app
-      nohup venv/bin/python app.py > snake_game.log 2>&1 &
-
-      echo "✅ Snake Game deployed successfully!"
-
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            set -ex
+            sudo -n apt update -y
+            sudo -n apt install -y python3 python3-pip python3-venv git
+            rm -rf season2-snake_game
+            git clone https://github.com/AshutoshBotle/season2-snake_game.git
+            cd season2-snake_game
+            python3 -m venv venv
+            source venv/bin/activate
+            pip install --upgrade pip
+            pip install -r requirements.txt
+            nohup venv/bin/python app.py > snake_game.log 2>&1 &
+            echo "✅ Snake Game deployed successfully!"
