--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,24 +21,25 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             set -ex
-            # Update system packages
             sudo apt update -y
             sudo apt install -y python3 python3-pip python3-venv git
 
-            # Clean up any old app directory
+            # Remove old directory if it exists
             rm -rf season2-snake_game
-
-            # Clone the repository
             git clone https://github.com/AshutoshBotle/season2-snake_game.git
             cd season2-snake_game
 
-            # Create a virtual environment and install dependencies
+            # Set up virtual environment
             python3 -m venv venv
             source venv/bin/activate
+
             pip install --upgrade pip
             pip install -r requirements.txt
 
-            # Run the Flask app in the background using nohup
-            nohup venv/bin/python app.py > snake_game.log 2>&1 &
+            # Kill any existing process using port 80 (optional safety step)
+            sudo fuser -k 80/tcp || true
 
-            echo "✅ Snake Game deployed successfully!"
+            # Run the app in background on port 80 using sudo and nohup
+            sudo nohup venv/bin/python app.py > snake_game.log 2>&1 &
+
+            echo "✅ Snake Game deployed and running on port 80"
